--- a/about_us.html
+++ b/about_us.html
@@ -22,8 +22,12 @@
 </head>
 <body>
 <header class="header_about_us">
+    <!------------------------
+        Header
+    -------------------------->
     <div class="header_box">
         <h1 class="header_title"><a href="./">Foodies</a></h1>
+        <!-- pc header menu -->
         <nav class="pc_header">
             <ul class="header_menu">
                 <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
@@ -31,18 +35,22 @@
                 <li class="header_menu_list"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- sp header -->
         <div id="nav-wrapper" class="nav-wrapper sp_header">
+            <!-- sp hamburger menu -->
             <div class="hamburger" id="js-hamburger">
                 <span class="hamburger__line hamburger__line--1"></span>
                 <span class="hamburger__line hamburger__line--2"></span>
                 <span class="hamburger__line hamburger__line--3"></span>
             </div>
             <nav class="sp-nav">
+                <!-- sp menu -->
                 <ul class="sp_menu">
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <!-- sp sns -->
                 <ul class="footer_sns">
                     <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
                     </li>
@@ -52,12 +60,17 @@
                                                                                   alt="Instagram"></a></li>
                 </ul>
             </nav>
+            <!-- sp menu background -->
             <div class="black-bg" id="js-black-bg"></div>
         </div>
     </div>
+    <!-- main image -->
     <h2 class="header_main_title sub_menu_title">About Us</h2>
 </header>
 <main>
+    <!------------------------
+        About Us
+    -------------------------->
     <section class="contents_box">
         <div class="contents_des_box about_us_des_box">
             <h3 class="contents_title">About Us</h3>
@@ -75,6 +88,9 @@
         </div>
         <div class="contents_img_box about_us_img_box"><img src="images/about_us_img.png" alt="About Us"></div>
     </section>
+    <!------------------------
+        Our History
+    -------------------------->
     <section class="contents_box">
         <div class="contents_img_box"><img src="images/our_history_img.png" alt=""></div>
         <div class="contents_des_box our_history_des_box">
@@ -88,9 +104,13 @@
     </section>
 </main>
 <footer>
+    <!------------------------
+        footer
+    -------------------------->
     <div class="footer_box">
         <h2 class="footer_title"><a href="">Foodies</a></h2>
         <div class="footer_link_box">
+            <!-- footer nav -->
             <nav>
                 <ul class="footer_nav_list">
                     <li><a href="">About us</a></li>
@@ -98,6 +118,7 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </nav>
+            <!-- footer sns -->
             <ul class="footer_sns">
                 <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
                 <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
@@ -107,8 +128,12 @@
             </ul>
         </div>
     </div>
+    <!-- copyright -->
     <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
+<!------------------------
+        javascript
+-------------------------->
 <script src="js/nav_menu.js"></script>
 </body>
 </html>
