--- a/recipes.html
+++ b/recipes.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Foodies - Recipes -" />
+    <meta property="og:title" content="Foodies - Recipes -"/>
     <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
-            guides, and meal plans, drawing over 15 million readers each month from around the world." />
-    <meta property="og:site_name" content="Foodies" />
-    <meta property="og:image" content=" サムネイル画像の URL" />
+            guides, and meal plans, drawing over 15 million readers each month from around the world."/>
+    <meta property="og:site_name" content="Foodies"/>
+    <meta property="og:image" content=" サムネイル画像の URL"/>
     <title>Foodies - Recipes -</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
@@ -142,77 +142,31 @@
                 </a>
             </li>
             <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-                    <dt class="recipe_category">Pasta</dt>
-                    <dt class="recipe_title">Bolognese</dt>
-                    <dd class="recipe_des">
-                        Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than it
-                        does to disappear into hungry tummies.
-                    </dd>
-                </dl>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
+                        <dt class="recipe_category">Pasta</dt>
+                        <dt class="recipe_title">Bolognese</dt>
+                        <dd class="recipe_des">
+                            Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than
+                            it
+                            does to disappear into hungry tummies.
+                        </dd>
+                    </dl>
+                </a>
             </li>
             <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-                    <dt class="recipe_category">Fast Food</dt>
-                    <dt class="recipe_title">Best Humburger</dt>
-                    <dd class="recipe_des">
-                        Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
-                        recipe for perfect hamburger patties every time!
-                    </dd>
-                </dl>
-            </li>
-        </ul>
-    </section>
-    <section class="contents_box">
-        <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
-        <ul class="recipe_list">
-            <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
-                                                  alt="Salmon with Creamy Spinachi"></dt>
-                    <dt class="recipe_category">Seafood</dt>
-                    <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
-                    <dd class="recipe_des">
-                        This pan seared salmon with creamy spinach recipe is so delicious your entire family will fall
-                        in love.
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
-                    </dt>
-                    <dt class="recipe_category">Chicken</dt>
-                    <dt class="recipe_title">Baked Chicken Wings</dt>
-                    <dd class="recipe_des">
-                        Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
-                        consisting of paprika, garlic, salt and pepper.
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
-                    <dt class="recipe_category">Fast Food</dt>
-                    <dt class="recipe_title">Margherita Pizza</dt>
-                    <dd class="recipe_des">
-                        This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a flavor-popping
-                        pizza sauce and perfectly chewy pizza crust.
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
-                    <dt class="recipe_category">Sweets</dt>
-                    <dt class="recipe_title">Apple Pie</dt>
-                    <dd class="recipe_des">
-                        This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery crust
-                        and a tender, lightly-spiced apple pie filling.
-                    </dd>
-                </dl>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
+                        <dt class="recipe_category">Fast Food</dt>
+                        <dt class="recipe_title">Best Humburger</dt>
+                        <dd class="recipe_des">
+                            Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
+                            recipe for perfect hamburger patties every time!
+                        </dd>
+                    </dl>
+                </a>
             </li>
         </ul>
     </section>
@@ -220,50 +174,123 @@
         <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
         <ul class="recipe_list">
             <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
-                                                  alt="Salmon with Creamy Spinachi"></dt>
-                    <dt class="recipe_category">Seafood</dt>
-                    <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
-                    <dd class="recipe_des">
-                        This pan seared salmon with creamy spinach recipe is so delicious your entire family will fall
-                        in love.
-                    </dd>
-                </dl>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
+                                                      alt="Salmon with Creamy Spinachi"></dt>
+                        <dt class="recipe_category">Seafood</dt>
+                        <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+                        <dd class="recipe_des">
+                            This pan seared salmon with creamy spinach recipe is so delicious your entire family will
+                            fall
+                            in love.
+                        </dd>
+                    </dl>
+                </a>
             </li>
             <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
-                    </dt>
-                    <dt class="recipe_category">Chicken</dt>
-                    <dt class="recipe_title">Baked Chicken Wings</dt>
-                    <dd class="recipe_des">
-                        Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
-                        consisting of paprika, garlic, salt and pepper.
-                    </dd>
-                </dl>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+                        </dt>
+                        <dt class="recipe_category">Chicken</dt>
+                        <dt class="recipe_title">Baked Chicken Wings</dt>
+                        <dd class="recipe_des">
+                            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
+                            consisting of paprika, garlic, salt and pepper.
+                        </dd>
+                    </dl>
+                </a>
             </li>
             <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
-                    <dt class="recipe_category">Fast Food</dt>
-                    <dt class="recipe_title">Margherita Pizza</dt>
-                    <dd class="recipe_des">
-                        This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a flavor-popping
-                        pizza sauce and perfectly chewy pizza crust.
-                    </dd>
-                </dl>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
+                        <dt class="recipe_category">Fast Food</dt>
+                        <dt class="recipe_title">Margherita Pizza</dt>
+                        <dd class="recipe_des">
+                            This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a
+                            flavor-popping
+                            pizza sauce and perfectly chewy pizza crust.
+                        </dd>
+                    </dl>
+                </a>
             </li>
             <li>
-                <dl>
-                    <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
-                    <dt class="recipe_category">Sweets</dt>
-                    <dt class="recipe_title">Apple Pie</dt>
-                    <dd class="recipe_des">
-                        This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery crust
-                        and a tender, lightly-spiced apple pie filling.
-                    </dd>
-                </dl>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
+                        <dt class="recipe_category">Sweets</dt>
+                        <dt class="recipe_title">Apple Pie</dt>
+                        <dd class="recipe_des">
+                            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery
+                            crust
+                            and a tender, lightly-spiced apple pie filling.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+        </ul>
+    </section>
+    <section class="contents_box">
+        <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
+        <ul class="recipe_list">
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
+                                                      alt="Salmon with Creamy Spinachi"></dt>
+                        <dt class="recipe_category">Seafood</dt>
+                        <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+                        <dd class="recipe_des">
+                            This pan seared salmon with creamy spinach recipe is so delicious your entire family will
+                            fall
+                            in love.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+                        </dt>
+                        <dt class="recipe_category">Chicken</dt>
+                        <dt class="recipe_title">Baked Chicken Wings</dt>
+                        <dd class="recipe_des">
+                            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
+                            consisting of paprika, garlic, salt and pepper.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
+                        <dt class="recipe_category">Fast Food</dt>
+                        <dt class="recipe_title">Margherita Pizza</dt>
+                        <dd class="recipe_des">
+                            This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a
+                            flavor-popping
+                            pizza sauce and perfectly chewy pizza crust.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
+                        <dt class="recipe_category">Sweets</dt>
+                        <dt class="recipe_title">Apple Pie</dt>
+                        <dd class="recipe_des">
+                            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery
+                            crust
+                            and a tender, lightly-spiced apple pie filling.
+                        </dd>
+                    </dl>
+                </a>
             </li>
         </ul>
     </section>
