:sparkles: add carousel images

--- a/recipes.html
+++ b/recipes.html
@@ -90,16 +90,16 @@
                     <li class="splide__slide">
                         <a href="recipe_detail.html">
                             <picture>
-                                <source srcset="images/slide_1_sp.png" media="(max-width: 540px)"/>
-                                <img src="images/slide_1_pc.png" alt="Best Genovese Source">
+                                <source srcset="images/slide_2_sp.png" media="(max-width: 540px)"/>
+                                <img src="images/slide_2_pc.png" alt="Easy Potato Recipe">
                             </picture>
                         </a>
                     </li>
                     <li class="splide__slide">
                         <a href="recipe_detail.html">
                             <picture>
-                                <source srcset="images/slide_1_sp.png" media="(max-width: 540px)"/>
-                                <img src="images/slide_1_pc.png" alt="Best Genovese Source">
+                                <source srcset="images/slide_3_sp.png" media="(max-width: 540px)"/>
+                                <img src="images/slide_3_pc.png" alt="Crispy Chicken Wings">
                             </picture>
                         </a>
                     </li>
