:bug: set the page link on footer menu

--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -136,14 +136,14 @@
         footer
     -------------------------->
     <div class="footer_box">
-        <h2 class="footer_title"><a href="">Foodies</a></h2>
+        <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
             <!-- footer nav -->
             <nav>
                 <ul class="footer_nav_list">
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Recipes</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="about_us.html">About us</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <!-- footer sns -->
