--- a/about_us.html
+++ b/about_us.html
@@ -94,7 +94,7 @@
         Our History
     -------------------------->
     <section class="contents_box">
-        <div class="contents_img_box"><img src="images/our_history_img.png" alt=""></div>
+        <div class="contents_img_box"><img src="images/our_history_img.png" alt="Our History"></div>
         <div class="contents_des_box our_history_des_box">
             <h3 class="contents_title">Our History</h3>
             <p class="contents_text">Elise Bauer was a busy Silicon Valley executive when she became sick with a flu
@@ -110,14 +110,14 @@
         footer
     -------------------------->
     <div class="footer_box">
-        <h2 class="footer_title"><a href="">Foodies</a></h2>
+        <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
             <!-- footer nav -->
             <nav>
                 <ul class="footer_nav_list">
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Recipes</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="about_us.html">About us</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <!-- footer sns -->
