--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         footer
     -------------------------->
     <div class="footer_box">
-        <h2 class="footer_title"><a href="">Foodies</a></h2>
+        <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
             <!-- footer nav -->
             <nav>
