:bug: fix the scroll event for nav menu

--- a/recipes.html
+++ b/recipes.html
@@ -29,13 +29,13 @@
         Header
     -------------------------->
     <div class="header_box">
-        <h1 class="header_title" id="title-color"><a href="./">Foodies</a></h1>
+        <h1 class="header_title"><a href="./" id="title-color">Foodies</a></h1>
         <!-- pc header menu -->
-        <nav class="pc_header" id="menu-color">
-            <ul class="header_menu">
-                <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
-                <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
-                <li class="header_menu_list"><a href="contact.html">Contact</a></li>
+        <nav class="pc_header">
+            <ul class="header_menu" id="menu-color">
+                <li class="header_menu_list"><a href="about_us.html" class="header_menu_list_link">About Us</a></li>
+                <li class="header_menu_list"><a href="recipes.html" class="header_menu_list_link">Recipes</a></li>
+                <li class="header_menu_list"><a href="contact.html" class="header_menu_list_link">Contact</a></li>
             </ul>
         </nav>
         <!-- sp header -->
